--- a/Random_Forest.ipynb
+++ b/Random_Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -34,7 +34,7 @@
        "      <th>Education</th>\n",
        "      <th>Level_before</th>\n",
        "      <th>Level_after</th>\n",
-       "      <th>difference value</th>\n",
+       "      <th>difference</th>\n",
        "      <th>Join</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -154,32 +154,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   Sex  Age  Health  Education  Level_before  Level_after  difference value  \\\n",
-       "0    0   66       1          1             0            0                 0   \n",
-       "1    1   64       1          1             0            0                 0   \n",
-       "2    0   42       2          2             0            0                 0   \n",
-       "3    0   40       2          2             0            0                 0   \n",
-       "4    0   40       2          2             0            0                 0   \n",
-       "5    1   27       2          2             0            0                 0   \n",
-       "6    0   67       1          1             0            0                 0   \n",
-       "7    0   72       1          1             2            1                 1   \n",
-       "8    1   68       1          1             2            1                 1   \n",
-       "9    0   40       2          3             2            1                 1   \n",
-       "\n",
-       "   Join  \n",
-       "0     1  \n",
-       "1     1  \n",
-       "2     0  \n",
-       "3     0  \n",
-       "4     0  \n",
-       "5     1  \n",
-       "6     1  \n",
-       "7     2  \n",
-       "8     1  \n",
-       "9     0  "
+       "   Sex  Age  Health  Education  Level_before  Level_after  difference  Join\n",
+       "0    0   66       1          1             0            0           0     1\n",
+       "1    1   64       1          1             0            0           0     1\n",
+       "2    0   42       2          2             0            0           0     0\n",
+       "3    0   40       2          2             0            0           0     0\n",
+       "4    0   40       2          2             0            0           0     0\n",
+       "5    1   27       2          2             0            0           0     1\n",
+       "6    0   67       1          1             0            0           0     1\n",
+       "7    0   72       1          1             2            1           1     2\n",
+       "8    1   68       1          1             2            1           1     1\n",
+       "9    0   40       2          3             2            1           1     0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -215,29 +203,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "rf = RandomForestClassifier(n_estimators=3)"
+    "rf = RandomForestClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cross_validation import train_test_split "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -261,11 +258,11 @@
        "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
        "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
        "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "            n_estimators=3, n_jobs=1, oob_score=False, random_state=None,\n",
+       "            n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
        "            verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -284,10 +281,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 0, 1, 1, 0, 2, 1, 0, 1, 1, 0, 1], dtype=int64)"
+       "array([0, 0, 1, 2, 1, 0, 2, 2, 2, 1, 0, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -307,10 +304,10 @@
     {
      "data": {
       "text/plain": [
-       "array([2, 0, 0, 1, 1, 2, 1, 1, 0, 1, 0, 2, 0, 1], dtype=int64)"
+       "array([0, 0, 0, 1, 0, 2, 1, 2, 0, 0, 1, 1, 1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -329,10 +326,10 @@
     {
      "data": {
       "text/plain": [
-       "0.21428571428571427"
+       "0.2857142857142857"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -362,19 +359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "X = input_binary.drop(['Join','Level_before','Level_after','Sex'],axis=1).as_matrix()\n",
+    "X = input_binary.drop(['Join','Level_before','Level_after'],axis=1).as_matrix()\n",
     "y = input_binary['Join'].as_matrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -382,10 +379,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0], dtype=int64)"
+       "array([1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -408,10 +405,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0], dtype=int64)"
+       "array([1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -430,10 +427,10 @@
     {
      "data": {
       "text/plain": [
-       "0.8571428571428571"
+       "0.42857142857142855"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -453,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average accracy: 0.509428571429\n"
+      "average accracy: 0.510071428571\n"
      ]
     }
    ],
@@ -470,12 +467,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 0 0 1 1 1 0 1 1 1 1 0 1 1 1 1 0 1 1 1 1 1 0 0 1 0 0 1 1 1 0 0 1 0 0 0\n",
+      " 0]\n",
+      "[0 0 1 1 0 0 1 0 1 1 0 0 0 0 0 1 0 1 1 0 1 1 1 1 1 0 1 1 0 1 1 1 1 1 0 0 1\n",
+      " 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Qingmu = pd.read_csv(\"data/Qingmu.csv\")\n",
+    "Qingmu = Qingmu.drop([\"ID\"],axis = 1 ).fillna(0)\n",
+    "Qingmu['Join'] = Qingmu['Join'].replace(2,1)\n",
+    "X_qm = Qingmu.drop(['Join','Level_before','Level_after'],axis=1).as_matrix()\n",
+    "y_qm = Qingmu['Join'].as_matrix()\n",
+    "y_qm_pre = rf.predict(X_qm)\n",
+    "print(y_qm)\n",
+    "print(y_qm_pre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 0 1 1 1 0 0 0 0 0 0 1 1 0 0 1 1 0 0 1 1 1 1 1 1 0 1 1 0 0 0 0 0]\n",
+      "[1 0 1 0 1 1 1 0 0 0 0 0 1 1 1 1 1 0 1 0 1 0 1 1 0 0 1 0 1 0 1 1 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Putuo = pd.read_csv('data/Putuo.csv')\n",
+    "Putuo = Putuo.drop([\"ID\"],axis = 1 ).fillna(0)\n",
+    "Putuo['Join'] = Putuo['Join'].replace(2,1)\n",
+    "X_pt = Putuo.drop(['Join','Level_before','Level_after'],axis=1).as_matrix()\n",
+    "y_pt = Putuo['Join'].as_matrix()\n",
+    "y_pt_pre = rf.predict(X_pt)\n",
+    "print(y_pt)\n",
+    "print(y_pt_pre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42105263157894735"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf.score(X_qm,y_qm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.52941176470588236"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf.score(X_pt,y_pt)"
+   ]
   },
   {
    "cell_type": "code",
