--- a/XGboost.ipynb
+++ b/XGboost.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -209,18 +209,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/anaconda/lib/python3.6/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cross_validation import train_test_split "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -325,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -336,7 +345,7 @@
        "0.92452830188679247"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +389,7 @@
        "0.71052631578947367"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,18 +402,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "Putuo = pd.read_csv(\"data/Putuo.csv\")\n",
-    "Putuo = Qingmu.drop([\"ID\"],axis = 1 ).fillna(0)\n",
-    "Qingmu['Join'] = Qingmu['Join'].replace(2,1)\n",
-    "X_qm = Qingmu.drop(['Join'],axis=1).as_matrix()\n",
-    "y_qm = Qingmu['Join'].as_matrix()"
+    "Putuo = Putuo.drop([\"ID\"],axis = 1 ).fillna(0)\n",
+    "Putuo['Join'] = Putuo['Join'].replace(2,1)\n",
+    "X_pt = Putuo.drop(['Join'],axis=1).as_matrix()\n",
+    "y_pt = Putuo['Join'].as_matrix()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.55882352941176472"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pre_pt = xg.predict(xgb.DMatrix(X_pt))\n",
+    "y_pre_pt\n",
+    "sum(to_one_hot(y_pre_pt)==y_pt)/y_pt.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
